src/include/jme/jme.h

            int jme_get_nutation(double jd_et, int model, double *dpsi, double *deps, char *error);
            void jme_get_nutation_matrix(double dpsi_rad, double deps_rad, double eps_rad, double *m);
            int jme_get_obliquity(double jd_et, int model, double *eps, char *error);
            int jme_get_orbital_elements(double jd_et, int body, int flags, double *elem, char *error);
            int jme_get_precession_matrix(double jd_start, double jd_end, int model, double *m);
            void jme_get_sidereal_mode(int *sidereal_mode, double *t0, double *ayan_t0);
            double jme_get_tid_acc(void);
            int jme_get_topo_pos(double jd_et, double *pos_au, char *error);
            double jme_heliacal_angle(double jd_ut, double *geopos, double *dat_hel, char *error);
            int jme_heliacal_pheno_ut(double jd_ut, double *geopos, double *dat_hel, char *error);
            int jme_heliacal_ut(double jd_ut, double *geopos, double *dat_hel, char *error);
            int jme_helio_cross(int body, double x2cross, double jd_ut, int flags, double *tret, char *error);
            int jme_helio_cross_ut(int body, double x2cross, double jd_ut, int flags, double *tret, char *error);
            void jme_horizontal_to_equatorial( double azimuth, double altitude, double geo_lat, double *hour_angle, double *dec );
            double jme_hours_normalize(double hours);
            double jme_hours_to_degrees(double hours);
            double jme_house_pos(double armc, double geo_lat, double eps, int house_system, double *xpin, char *error);
            int jme_houses(double jd_ut, double geo_lat, double geo_lon, int house_system, double *cusps, double *ascmc);
            int jme_houses_armc(double armc, double geo_lat, double eps, int house_system, double *cusps, double *ascmc);