lib/src/jme_bindings.dart


  late final _jme_get_nutationPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Double,
              ffi.Int,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Char>)>>('jme_get_nutation');
  late final _jme_get_nutation = _jme_get_nutationPtr.asFunction<
      int Function(double, int, ffi.Pointer<ffi.Double>,
          ffi.Pointer<ffi.Double>, ffi.Pointer<ffi.Char>)>();

  void jme_get_nutation_matrix(
    double dpsi_rad,
    double deps_rad,
    double eps_rad,
    ffi.Pointer<ffi.Double> m,
  ) {
    return _jme_get_nutation_matrix(
      dpsi_rad,
      deps_rad,
      eps_rad,
      m,
    );
  }

  late final _jme_get_nutation_matrixPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Double, ffi.Double, ffi.Double,
              ffi.Pointer<ffi.Double>)>>('jme_get_nutation_matrix');
  late final _jme_get_nutation_matrix = _jme_get_nutation_matrixPtr.asFunction<
      void Function(double, double, double, ffi.Pointer<ffi.Double>)>();

  int jme_get_obliquity(
    double jd_et,
    int model,
    ffi.Pointer<ffi.Double> eps,
    ffi.Pointer<ffi.Char> error,
  ) {
    return _jme_get_obliquity(
      jd_et,
      model,
      eps,
      error,
    );
  }

  late final _jme_get_obliquityPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Double, ffi.Int, ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Char>)>>('jme_get_obliquity');
  late final _jme_get_obliquity = _jme_get_obliquityPtr.asFunction<
      int Function(
          double, int, ffi.Pointer<ffi.Double>, ffi.Pointer<ffi.Char>)>();

  int jme_get_orbital_elements(
    double jd_et,
    int body,
    int flags,
    ffi.Pointer<ffi.Double> elem,
    ffi.Pointer<ffi.Char> error,
  ) {
    return _jme_get_orbital_elements(
      jd_et,
      body,
      flags,
      elem,
      error,
    );
  }

  late final _jme_get_orbital_elementsPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Double,
              ffi.Int,
              ffi.Int,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Char>)>>('jme_get_orbital_elements');
  late final _jme_get_orbital_elements =
      _jme_get_orbital_elementsPtr.asFunction<
          int Function(double, int, int, ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Char>)>();

  int jme_get_precession_matrix(
    double jd_start,
    double jd_end,
    int model,
    ffi.Pointer<ffi.Double> m,
  ) {
    return _jme_get_precession_matrix(
      jd_start,
      jd_end,
      model,
      m,
    );
  }

  late final _jme_get_precession_matrixPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Double, ffi.Double, ffi.Int,
              ffi.Pointer<ffi.Double>)>>('jme_get_precession_matrix');
  late final _jme_get_precession_matrix = _jme_get_precession_matrixPtr
      .asFunction<int Function(double, double, int, ffi.Pointer<ffi.Double>)>();

  void jme_get_sidereal_mode(
    ffi.Pointer<ffi.Int> sidereal_mode,
    ffi.Pointer<ffi.Double> t0,
    ffi.Pointer<ffi.Double> ayan_t0,
  ) {
    return _jme_get_sidereal_mode(
      sidereal_mode,
      t0,
      ayan_t0,
    );
  }

  late final _jme_get_sidereal_modePtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Int>, ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Double>)>>('jme_get_sidereal_mode');
  late final _jme_get_sidereal_mode = _jme_get_sidereal_modePtr.asFunction<
      void Function(ffi.Pointer<ffi.Int>, ffi.Pointer<ffi.Double>,
          ffi.Pointer<ffi.Double>)>();

  double jme_get_tid_acc() {
    return _jme_get_tid_acc();
  }

  late final _jme_get_tid_accPtr =
      _lookup<ffi.NativeFunction<ffi.Double Function()>>('jme_get_tid_acc');
  late final _jme_get_tid_acc =
      _jme_get_tid_accPtr.asFunction<double Function()>();

  int jme_get_topo_pos(
    double jd_et,
    ffi.Pointer<ffi.Double> pos_au,
    ffi.Pointer<ffi.Char> error,
  ) {
    return _jme_get_topo_pos(
      jd_et,
      pos_au,
      error,
    );
  }

  late final _jme_get_topo_posPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Double, ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Char>)>>('jme_get_topo_pos');
  late final _jme_get_topo_pos = _jme_get_topo_posPtr.asFunction<
      int Function(double, ffi.Pointer<ffi.Double>, ffi.Pointer<ffi.Char>)>();

  double jme_heliacal_angle(
    double jd_ut,
    ffi.Pointer<ffi.Double> geopos,
    ffi.Pointer<ffi.Double> dat_hel,
    ffi.Pointer<ffi.Char> error,
  ) {
    return _jme_heliacal_angle(
      jd_ut,
      geopos,
      dat_hel,
      error,
    );
  }

  late final _jme_heliacal_anglePtr = _lookup<
      ffi.NativeFunction<
          ffi.Double Function(
              ffi.Double,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Char>)>>('jme_heliacal_angle');
  late final _jme_heliacal_angle = _jme_heliacal_anglePtr.asFunction<
      double Function(double, ffi.Pointer<ffi.Double>, ffi.Pointer<ffi.Double>,
          ffi.Pointer<ffi.Char>)>();

  int jme_heliacal_pheno_ut(
    double jd_ut,
    ffi.Pointer<ffi.Double> geopos,
    ffi.Pointer<ffi.Double> dat_hel,
    ffi.Pointer<ffi.Char> error,
  ) {
    return _jme_heliacal_pheno_ut(
      jd_ut,
      geopos,
      dat_hel,
      error,
    );
  }

  late final _jme_heliacal_pheno_utPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Double,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Char>)>>('jme_heliacal_pheno_ut');
  late final _jme_heliacal_pheno_ut = _jme_heliacal_pheno_utPtr.asFunction<
      int Function(double, ffi.Pointer<ffi.Double>, ffi.Pointer<ffi.Double>,
          ffi.Pointer<ffi.Char>)>();

  int jme_heliacal_ut(
    double jd_ut,
    ffi.Pointer<ffi.Double> geopos,
    ffi.Pointer<ffi.Double> dat_hel,
    ffi.Pointer<ffi.Char> error,
  ) {
    return _jme_heliacal_ut(
      jd_ut,
      geopos,
      dat_hel,
      error,
    );
  }

  late final _jme_heliacal_utPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Double,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Char>)>>('jme_heliacal_ut');
  late final _jme_heliacal_ut = _jme_heliacal_utPtr.asFunction<
      int Function(double, ffi.Pointer<ffi.Double>, ffi.Pointer<ffi.Double>,
          ffi.Pointer<ffi.Char>)>();

  int jme_helio_cross(
    int body,
    double x2cross,
    double jd_ut,
    int flags,
    ffi.Pointer<ffi.Double> tret,
    ffi.Pointer<ffi.Char> error,
  ) {
    return _jme_helio_cross(
      body,
      x2cross,
      jd_ut,
      flags,
      tret,
      error,
    );
  }

  late final _jme_helio_crossPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Int,
              ffi.Double,
              ffi.Double,
              ffi.Int,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Char>)>>('jme_helio_cross');
  late final _jme_helio_cross = _jme_helio_crossPtr.asFunction<
      int Function(int, double, double, int, ffi.Pointer<ffi.Double>,
          ffi.Pointer<ffi.Char>)>();

  int jme_helio_cross_ut(
    int body,
    double x2cross,
    double jd_ut,
    int flags,
    ffi.Pointer<ffi.Double> tret,
    ffi.Pointer<ffi.Char> error,
  ) {
    return _jme_helio_cross_ut(
      body,
      x2cross,
      jd_ut,
      flags,
      tret,
      error,
    );
  }

  late final _jme_helio_cross_utPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Int,
              ffi.Double,
              ffi.Double,
              ffi.Int,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Char>)>>('jme_helio_cross_ut');
  late final _jme_helio_cross_ut = _jme_helio_cross_utPtr.asFunction<
      int Function(int, double, double, int, ffi.Pointer<ffi.Double>,
          ffi.Pointer<ffi.Char>)>();

  void jme_horizontal_to_equatorial(
    double azimuth,
    double altitude,
    double geo_lat,
    ffi.Pointer<ffi.Double> hour_angle,
    ffi.Pointer<ffi.Double> dec,
  ) {
    return _jme_horizontal_to_equatorial(
      azimuth,
      altitude,
      geo_lat,
      hour_angle,
      dec,
    );
  }

  late final _jme_horizontal_to_equatorialPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Double,
              ffi.Double,
              ffi.Double,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Double>)>>('jme_horizontal_to_equatorial');
  late final _jme_horizontal_to_equatorial =
      _jme_horizontal_to_equatorialPtr.asFunction<
          void Function(double, double, double, ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Double>)>();

  double jme_hours_normalize(
    double hours,
  ) {
    return _jme_hours_normalize(
      hours,
    );
  }

  late final _jme_hours_normalizePtr =
      _lookup<ffi.NativeFunction<ffi.Double Function(ffi.Double)>>(
          'jme_hours_normalize');
  late final _jme_hours_normalize =
      _jme_hours_normalizePtr.asFunction<double Function(double)>();

  double jme_hours_to_degrees(
    double hours,
  ) {
    return _jme_hours_to_degrees(
      hours,
    );
  }

  late final _jme_hours_to_degreesPtr =
      _lookup<ffi.NativeFunction<ffi.Double Function(ffi.Double)>>(
          'jme_hours_to_degrees');
  late final _jme_hours_to_degrees =
      _jme_hours_to_degreesPtr.asFunction<double Function(double)>();

  double jme_house_pos(
    double armc,
    double geo_lat,
    double eps,
    int house_system,
    ffi.Pointer<ffi.Double> xpin,
    ffi.Pointer<ffi.Char> error,
  ) {
    return _jme_house_pos(
      armc,
      geo_lat,
      eps,
      house_system,
      xpin,
      error,
    );
  }

  late final _jme_house_posPtr = _lookup<
      ffi.NativeFunction<
          ffi.Double Function(
              ffi.Double,
              ffi.Double,
              ffi.Double,
              ffi.Int,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Char>)>>('jme_house_pos');
  late final _jme_house_pos = _jme_house_posPtr.asFunction<
      double Function(double, double, double, int, ffi.Pointer<ffi.Double>,
          ffi.Pointer<ffi.Char>)>();

  int jme_houses(
    double jd_ut,
    double geo_lat,
    double geo_lon,
    int house_system,
    ffi.Pointer<ffi.Double> cusps,
    ffi.Pointer<ffi.Double> ascmc,
  ) {
    return _jme_houses(
      jd_ut,
      geo_lat,
      geo_lon,
      house_system,
      cusps,
      ascmc,
    );
  }

  late final _jme_housesPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Double, ffi.Double, ffi.Double, ffi.Int,
              ffi.Pointer<ffi.Double>, ffi.Pointer<ffi.Double>)>>('jme_houses');
  late final _jme_houses = _jme_housesPtr.asFunction<
      int Function(double, double, double, int, ffi.Pointer<ffi.Double>,
          ffi.Pointer<ffi.Double>)>();

  int jme_houses_armc(
    double armc,
    double geo_lat,
    double eps,
    int house_system,
    ffi.Pointer<ffi.Double> cusps,
    ffi.Pointer<ffi.Double> ascmc,
  ) {
    return _jme_houses_armc(
      armc,
      geo_lat,
      eps,
      house_system,
      cusps,
      ascmc,
    );
  }

  late final _jme_houses_armcPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Double,
              ffi.Double,
              ffi.Double,
              ffi.Int,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Double>)>>('jme_houses_armc');
  late final _jme_houses_armc = _jme_houses_armcPtr.asFunction<
      int Function(double, double, double, int, ffi.Pointer<ffi.Double>,
          ffi.Pointer<ffi.Double>)>();
